# formal-record

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.githooks/: pre-push
.github/workflows/: no-conflict-markers.yml  verify.yml
docs/: API.md  SCHEMA.md  UPSTREAMS.md
registry/: catalog.json  records.jsonl  upstreams.json
schema/: catalog.schema.json  record.schema.json
scripts/: forbid-conflict-markers.sh
src/conjecture_records/: __init__.py  api.py  catalog.py  cli.py  crosswalk.py  schema.py  verify.py
src/conjecture_records/importers/: __init__.py  formal_conjectures.py  openconjecture.py
tests/: test_api.py  test_catalog.py  test_crosswalk.py  test_importers.py  test_schema.py  test_verify.py
tests/fixtures/commentary/: README.md
tests/fixtures/commentary/openconjectures/example-packet/: README.md
tests/fixtures/commentary/openconjectures/example-packet/data/: replay_receipt.json  source_identity.json
